Fix: Do not display vote image on small device

--- a/src/app/modules/votes/votes.component.css
+++ b/src/app/modules/votes/votes.component.css
@@ -2,6 +2,10 @@
   main {
     margin-top: 0;
   }
+
+  #vote-img {
+    display: none;
+  }
 }
 
 a {
